--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,14 +19,15 @@ android {
             }
         }
         defaultConfig {
-            javaCompileOptions {
-                annotationProcessorOptions {
-                    arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
-                }
-            }
+//            javaCompileOptions {
+//                annotationProcessorOptions {
+//                    arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+//                }
+//            }
         }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -34,6 +35,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
     buildTypes.each {
@@ -50,13 +60,16 @@ def room_version = '2.2.5'
 def dagger_version = '2.28'
 def rxJavaVersion = '2.1.1'
 def glide_version='4.11.0'
+def material_version='1.2.1'
 def retrofit_version = '2.9.0'
+def okHttp_version = '4.8.1'
 def gsonVersion = '2.8.4'
 def retrofitVersion = '2.6.1'
 def okhttpVersion = '4.2.1'
 def mockito_version='2.18.3'
 def espresso_version='3.2.0'
 def robolectrick_version='4.4'
+def photoView_version='2.3.0'
 
 
 dependencies {
@@ -69,6 +82,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
+    //Material lib
+    implementation "com.google.android.material:material:$material_version"
+
+    //PhotoView to zoom big image
+    implementation "com.github.chrisbanes:PhotoView:$photoView_version"
+
     //    Dagger2
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
@@ -80,6 +99,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
+    //OkHttpLoggingInterceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_version"
 
     //Gson
     implementation "com.google.code.gson:gson:$gsonVersion"
